--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.2",
     "mongoose": "~4.8.5",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
