--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ node_modules
 
 # Debug log from npm
 npm-debug.log
+
+#ignore uploaded files
+public/uploads
+#ignore development environment variables
+.env
